# minot

./: .gitattributes  .gitignore  .gitlab-ci.yml  404.html  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  bagquery.html  debug.rl  dev.md  index.html  install  install.sh  installation.html  keybindings.html  lore.html  package.xml  pubsub.html  r2r_cargo.cmake  sitemap.xml  tui.html  varshare.html  wind.rl  wind_ros2.rl
.cargo/: config.toml
.forgejo/workflows/: docs.yml  release.yml
.github/workflows/: ci.yml  pypi.yml  release.yml  release.yml.bak
assets/: demo_publish.rviz
bagread/: Cargo.toml
bagread/src/: lib.rs  qos.rs
bagread/test/: metadata-v5.yml
docs/: README.md  mkdocs.yml  zensical.toml
docs/docs/: .nav.yml  bagquery.md  code_example.md  index.md  install  installation.md  keybindings.md  lore.md  pubsub.md  tui.md  varshare.md
docs/docs/assets/: demo_publish.rl
docs/docs/features/: actions.md  api.md  bagquery.md  pubsub.md  services.md  varshare.md
docs/docs/features/sync/: keybindings.md  overview.md
docs/docs/features/tui/: overview.md
docs/docs/installation/: archives.md  librat.md  packages.md  publisher.md  pubsub.md  ratpub.md  ros.md  script.md  tools.md
docs/docs/intro/: pubsub.md  query.md  share.md
docs/docs/stylesheets/: extra.css
lighthouse/: Cargo.toml
lighthouse/src/: app.rs  coord.rs  handler.rs  lighthouse.rs  ui.rs
liol/: Cargo.toml
liol/src/: app.rs  cmp.rs  coord.rs  handler.rs  lighthouse.rs  main.rs  network.rs  ui.rs
minot/: Cargo.toml  README.md  build.rs  pyproject.toml
minot/src/: app.rs  coord.rs  event.rs  gen_c.rs  gen_c.rs.patch  gen_c.rs.patch2  gen_c_tests.rs  handler.rs  minot.rs  runner.rs  tui.rs  ui.rs
msg/ros1/: README.md
mt/: loop_test.mt  simple_loop.mt  test.mt  varshare_demo.mt
mt_action/: Cargo.toml  README.md
mt_action/examples/: client.rs  robot_client.rs  robot_server.rs  server.rs
mt_action/src/: lib.rs  messages.rs  runner.rs
mt_bagread/: Cargo.toml  README.md
mt_bagread/src/: lib.rs  qos.rs
mt_bagread/test/: metadata-v9.yml
mt_coord/: Cargo.toml  README.md
mt_coord/src/: lib.rs
mt_mtc/: Cargo.toml  README.md
mt_mtc/src/: lib.rs
mt_net/: Cargo.toml  README.md
mt_net/examples/: c_interop_layout.rs  c_interop_pc2.rs  c_interop_test.rs
mt_net/src/: bin_layout.rs  c_interop_test.rs  lib.rs
mt_pubsub/: Cargo.toml  README.md
mt_pubsub/examples/: be_node.rs  be_sub.rs  be_sub_drop.rs  be_sub_error.rs  pub.rs  smol.rs  sub.rs
mt_pubsub/src/: lib.rs
mt_rat/: Cargo.toml  README.md  librat.pc  libratConfig.cmake
mt_rat/examples/: rat1.rs  rat2.rs  test_layout.rs
mt_rat/src/: lib.rs
mt_scope/: Cargo.toml  README.md
mt_scope/examples/: test.rs
mt_scope/src/: lib.rs
mt_sea/: Cargo.toml  README.md
mt_sea/src/: client.rs  coordinator.rs  lib.rs  net.rs  network.rs  ship.rs
mt_service/: Cargo.toml  README.md
mt_service/examples/: bad_service_client.rs  basic_service_client.rs  basic_service_client2.rs  basic_service_server.rs
mt_service/src/: lib.rs
mt_wind/: Cargo.toml  README.md
mt_wind/src/: lib.rs  mt_pubsub.rs  ratpub.rs  ros1.rs  ros2.rs  ros2_r2r.rs
mtc/: Cargo.toml
mtc/src/: lib.rs
net/: Cargo.toml
net/src/: lib.rs
packaging/arch/: PKGBUILD
packaging/arch-bin/: PKGBUILD
packaging/homebrew/: minot.rb
rat/: Cargo.toml  build.rs  rat.h
rat/examples/: rat1.rs  rat2.c  rat2.rs
rat/src/: lib.rs
ratpub/: Cargo.toml  README.md
ratpub/examples/: README.md  pub.rs  sub.rs
ratpub/src/: lib.rs
ratpub_smol/: Cargo.toml
ratpub_smol/src/: main.rs
ratpubsub/: Cargo.toml
ratpubsub/examples/: pub.rs  rules.rl  sub.rs
ratpubsub/src/: lib.rs
rats-lang/: example.rat  example.rl  hello_world.rat  hello_world.rl  wind.rl
rl/: hello_world.rl  var_share_hello_world.rl  varshare_demo.rl  wind.rl  wind_hello_world.rl  wind_ros2.rl
rlc/: Cargo.toml
rlc/src/: lib.rs
scripts/: bump-version.sh  cargo-publish.sh  install-jazzy.bash  make-deb.bash
sea/: Cargo.toml
sea/src/: cannon.rs  client.rs  constants.rs  coordinator.rs  datapack_handler.rs  lib.rs  medium.rs  net.rs  packet.rs  protocol.rs  router.rs  ship.rs  traits.rs
search/: search_index.js  search_index.json
stylesheets/: extra.css
vscode/: CHANGELOG.md  README.md  mt.configuration.json  package-lock.json  package.json
vscode/src/: extension.ts
vscode/syntaxes/: mt.tmLanguage.json
wind/: Cargo.toml
wind/src/: lib.rs  ratpub.rs  ratpubsub.rs  ros1.rs  ros2.rs  ros2_r2r.rs  roslibrustcloud.rs
