[workspace]

members = ["minot", "ratpub", "mt_bagread", "mt_rat", "mt_mtc", "mt_sea", "mt_wind", "mt_net"]
resolver = "3"

[workspace.package]
version = "0.4.0"
keywords = ["robotics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/uos/minot"
edition = "2024"
authors = ["Christopher Sieh <csieh@uos.de>"]
categories = [
  "science::robotics",
]
documentation = "https://uos.github.io/minot"
homepage = "https://uos.github.io/minot"
rust-version = "1.85"
exclude = [
  "**/.github/**",
  "**/tests/**",
  "**/mt/**",
  "**/benches/**",
  "**/target/**",
  "**/build/**",
  "**/dist/**",
  "**/docs/**",
  "**/venv/**",
  "**/vscode/**",
]

[workspace.dependencies]
mt_sea = { path = "mt_sea", version = "0.4.0" }
ratpub = { path = "ratpub", version = "0.4.0" }
mt_bagread = { path = "mt_bagread", version = "0.4.0" }
mt_net = { path = "mt_net", version = "0.4.0" }
mt_wind = { path = "mt_wind", version = "0.4.0" }
mt_mtc = { path = "mt_mtc", version = "0.4.0" }

anyhow = "1"
r2r = "0.9.5"
async-trait = "0.1.86"
rkyv = { version = "0.8.10" }
env_logger = "0.11.6"
log = "0.4.25"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
ros_pointcloud2 = { version = "1.0.0-rc.2", features = [
  "serde",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
deadpool = { version = "0.12", features = ["managed"] }
ros2-client = { version = "0.8.2" }
ros2-interfaces-jazzy-serde = { version = "0.0.4", features = [
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "nav_msgs",
  "builtin_interfaces",
] }
ros2-interfaces-jazzy-rkyv = { version = "0.0.5", features = [
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "nav_msgs",
  "builtin_interfaces",
] }
roslibrust = { version = "0.18", features = ["ros1", "macro"] }

[profile.release]
lto = "fat"         # Link Time Optimization
codegen-units = 1   # Slower compile times but compiler sees all generated code and can optimize over everything across modules. Also decreases binary size.
strip = "symbols"   # Significantly reduce binary size
opt-level = "s"     # Optimize for size but keep some performance
debug = 0

[profile.colcon]
inherits = "release"
