[workspace]

members = [
  "minot",
  "ratpub",
  "mt_bagread",
  "mt_rat",
  "mt_mtc",
  "mt_sea",
  "mt_wind",
  "mt_net",
]
resolver = "3"

[workspace.package]
version = "0.5.3"
keywords = ["robotics"]
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/stelzo/minot"
edition = "2024"
authors = ["Christopher Sieh <stelzo@steado.de>"]
categories = ["science::robotics"]
documentation = "https://uos.github.io/minot"
homepage = "https://uos.github.io/minot"
rust-version = "1.85"
exclude = [
  "**/.github/**",
  "**/tests/**",
  "**/mt/**",
  "**/benches/**",
  "**/target/**",
  "**/build/**",
  "**/dist/**",
  "**/docs/**",
  "**/venv/**",
  "**/vscode/**",
]

[workspace.dependencies]
mt_sea = { path = "mt_sea", version = "0.5.3" }
ratpub = { path = "ratpub", version = "0.5.3" }
mt_bagread = { path = "mt_bagread", version = "0.5.3" }
mt_net = { path = "mt_net", version = "0.5.3" }
mt_wind = { path = "mt_wind", version = "0.5.3" }
mt_mtc = { path = "mt_mtc", version = "0.5.3" }

# Tools
anyhow = "1.0"
serde_json = "1.0"
async-trait = "0.1.86"
env_logger = "0.11.6"
log = "0.4.25"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
rosbag2-rs = "0.2.1"
chrono = "0.4.40"
tui-logger = "0.16.0"
regex = "1.12"
once_cell = "1.21"
rust_decimal = "1.37.1"
logos = "0.15.0"
chumsky = { version = "0.12", default-features = false, features = ["std"] }
ariadne = "0.4"
mcap = "0.17.0"
camino = "1.0"
serde_yml = "0.0.12"
cdr = "0.2.4"
rand = "0.8"
cdr-encoding = "0.10"
bytesize = "2.3"

# IO
futures-lite = "2.6"
tokio = { version = "1.49", features = ["signal", "process"] }
zenoh = { version = "1.7", features = [
  "transport_multilink",
  "transport_tcp",
  "unstable",
] }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
rkyv = { version = "0.8.10" }
serde = { version = "1.0", features = ["derive"] }

# ROS
r2r = "0.9.5"
ros2-client = { version = "0.8.2" }
ros2-interfaces-jazzy-serde = { version = "0.0.4", features = [
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "nav_msgs",
  "builtin_interfaces",
] }
ros2-interfaces-jazzy-rkyv = { version = "0.0.5", features = [
  "std_msgs",
  "geometry_msgs",
  "sensor_msgs",
  "nav_msgs",
  "builtin_interfaces",
] }
roslibrust = { version = "0.18", features = ["ros1", "macro"] }

[profile.release]
strip = "symbols" # Significantly reduce binary size
opt-level = "s"   # Optimize for size but keep some performance
debug = 0

[profile.full-release]
inherits = "release"
lto = "fat"          # Link Time Optimization
codegen-units = 1    # Slower compile times but compiler sees all generated code and can optimize over everything across modules. Also decreases binary size.

[profile.colcon]
inherits = "release"
