[package]
name = "bagread"
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
mcap = "0.17.0"
anyhow.workspace = true
camino = "1.0"
memmap2 = "0.9.5"
tempfile = "3.3"
serde.workspace = true
serde_yml = "0.0.12"
ros_pointcloud2.workspace = true
nalgebra.workspace = true
ros2-interfaces-jazzy = "0.0.4"
cdr = "0.2.4"
