[package]
name = "bagread"
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
mcap = "0.17.0"
log.workspace = true
anyhow.workspace = true
mtc.workspace = true
camino = "1.0"
memmap2 = "0.9.5"
tempfile = "3.3"
rkyv.workspace = true
tokio.workspace = true
serde.workspace = true
serde_yml = "0.0.12"
ros_pointcloud2.workspace = true
nalgebra.workspace = true
ros2-client.workspace = true
ros2-interfaces-jazzy.workspace = true
ros2-interfaces-jazzy-rkyv.workspace = true
cdr-encoding = { version = "0.10" }
byteorder = { version = "1.3", features = ["i128"] }
cdr = "0.2.4"

[features]
humble = []
