[package]
name = "bagread"
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
mcap = "0.17.0"
log.workspace = true
anyhow.workspace = true
mtc.workspace = true
net.workspace = true
camino = "1.0"
rkyv.workspace = true
tokio.workspace = true
serde.workspace = true
serde_yml = "0.0.12"
ros_pointcloud2.workspace = true
nalgebra.workspace = true
ros2-interfaces-jazzy-serde.workspace = true
ros2-interfaces-jazzy-rkyv.workspace = true
cdr = "0.2.4"

[features]
humble = []
