[package]
name = "liol"
edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sea.workspace = true
env_logger.workspace = true
log.workspace = true
nalgebra.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
anyhow.workspace = true
ros_pointcloud2.workspace = true

[profile.release]
lto = true          # Link Time Optimization
codegen-units = 1   # Slower compile times but compiler sees all generated code and can optimize over everything across modules. Also decreases binary size.
strip = "debuginfo" # Significantly reduce binary size

[profile.dev.package.backtrace]
opt-level = 3
