[package]
name = "minot"
edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
sea.workspace = true
env_logger.workspace = true
log.workspace = true
nalgebra.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rlc.workspace = true
bagread.workspace = true
bincode.workspace = true
anyhow.workspace = true
ros_pointcloud2.workspace = true
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
rosbag2-rs = "0.2.1"
chrono = "0.4.40"
tui-logger = "0.17.2"
clap = { version = "4.5.28", features = ["derive"] }
regex = "1"
once_cell = "1"

wind = { optional = true, workspace = true }
rust_decimal = "1.37.1"

[[bin]]
name = "minot-coord"
path = "src/coord.rs"
test = false
bench = false

[[bin]]
name = "minot"
path = "src/minot.rs"
test = false
bench = false

# Note: All following features only embed existing nodes that can be built and run separately through the network.
[features]
default = ["embed-coord"]

# Use the official C API for ROS2 publishing (r2r crate). Enable for maximum compatibility at the cost of needing an actively sourced ROS2 installation.
embed-ros2-c = ["embed-ros2-c-turbine"]

# Same as above but removing BestAvailable QoS to be compatible with Humble
embed-ros2-c-humble = ["embed-ros2-c-turbine", "wind/humble"]

# Use a native Rust implementation of ROS2 (ros2-client crate). Not stable for publishing the "any" type.
embed-ros2-native = ["embed-ros2-turbine"]

# Enable for ROS1 publishing through a Rust implementation of the ROS1 client library (patched roslibrust crate) with no system dependencies.
embed-ros1-native = ["embed-ros1-turbine"]

# Publishing through a pub-sub implementation on top of the existing network stack from Minot.
embed-ratpub = ["embed-ratpub-turbine"]

# Run the coordinator in the background.
embed-coord = ["embed-coordinator"]

# ROS2 publishing with maximum compatibility and ROS1. Both networks need to be available to this process.
embed-ros = ["embed-ros2-c", "embed-ros1-native"]

# Only native Rust ROS implementations so no ROS installation needed. Can only publish non-any typed topics.
embed-ros-native = ["embed-ros2-native", "embed-ros1-native"]

embed-coordinator = []
embed-ros2-turbine = ["dep:wind", "wind/ros2-native"]
embed-ros2-c-turbine = ["dep:wind", "wind/ros2-c"]
embed-ros1-turbine = ["dep:wind", "wind/ros1-native"]
embed-ratpub-turbine = ["dep:wind", "wind/ratpub"]
