[package]
name = "mt_bagread"
description = "Reading ROS Bagfiles with queries for Minot."
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
mcap.workspace = true
log.workspace = true
anyhow.workspace = true
mt_mtc.workspace = true
mt_net.workspace = true
camino.workspace = true
rkyv.workspace = true
tokio.workspace = true
serde.workspace = true
serde_yml.workspace = true
nalgebra.workspace = true
ros2-interfaces-jazzy-serde.workspace = true
ros2-interfaces-jazzy-rkyv.workspace = true
cdr.workspace = true

[features]
humble = []
