[package]
name = "mt_mtc"
description = "Tokenizer and parser for the Minot language."
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
mt_net.workspace = true
logos.workspace = true
chumsky.workspace = true
ariadne.workspace = true
