[package]
name = "mt_net"
description = "Network communication types and pub/sub resolution in Minot."
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
rkyv.workspace = true
ros_pointcloud2.workspace = true
ros2-interfaces-jazzy-rkyv.workspace = true
anyhow.workspace = true
serde.workspace = true
