[package]
name = "mt_rat"
description = "Share and sync variables over the Minot network."
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
mt_sea.workspace = true
env_logger.workspace = true
log.workspace = true
nalgebra.workspace = true
tokio.workspace = true
rkyv.workspace = true
anyhow.workspace = true
async-trait.workspace = true
rand.workspace = true

[lib]
name = "rat"
crate-type = [
  "dylib",
  "rlib",      # needed when building the example
  "staticlib",
] # use as crate on rust and as static library on C++

[package.metadata.deb]
name = "librat-dev"
assets = [
    ["rat.h", "usr/include/rat/rat.h", "644"],
    ["librat.pc", "usr/lib/pkgconfig/librat.pc", "644"],
    ["target/release/librat.so", "usr/lib/librat.so", "644"],
    ["target/release/librat.a", "usr/lib/librat.a", "644"],
]
