[package]
name = "mt_sea"
description = "Primitives for a Minot network."
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
rust-version.workspace = true
exclude.workspace = true


[dependencies]
nalgebra.workspace = true
log.workspace = true
mt_net.workspace = true
env_logger.workspace = true
rand = "0.8.5"
tokio.workspace = true
anyhow.workspace = true
ros_pointcloud2.workspace = true
rkyv.workspace = true
pnet = "0.35.0"
socket2 = "0.5.8"
deadpool.workspace = true
async-trait.workspace = true
