[package]
name = "mt_sea"
description = "Primitives for a Minot network."
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
rust-version.workspace = true
exclude.workspace = true

[features]
default = []
shm = ["zenoh/shared-memory"]

[dependencies]
nalgebra.workspace = true
log.workspace = true
mt_net.workspace = true
env_logger.workspace = true
rand.workspace = true
tokio.workspace = true
anyhow.workspace = true
rkyv.workspace = true
async-trait.workspace = true
zenoh.workspace = true
