[package]
name = "mtc"
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
net.workspace = true
logos = "0.15.0"
chumsky = "0.10.0"
ariadne = "0.4"
