[package]
name = "net"
description = "Integration network communication and pub/sub resolution in Minot"
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true
authors.workspace = true

[dependencies]
rkyv.workspace = true
ros_pointcloud2.workspace = true
ros2-interfaces-jazzy-rkyv.workspace = true
anyhow.workspace = true
serde.workspace = true
