[package]
name = "rat"
edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sea.workspace = true
env_logger.workspace = true
log.workspace = true
nalgebra.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
anyhow.workspace = true

[lib]
crate-type = [
    "dylib",
    "staticlib",
] # use as crate on rust and as static library on c++
