[package]
name = "ratpub"
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
sea.workspace = true
env_logger.workspace = true
log.workspace = true
nalgebra.workspace = true
tokio.workspace = true
rkyv.workspace = true
bincode.workspace = true
anyhow.workspace = true
async-trait.workspace = true
ros2-interfaces-jazzy-rkyv.workspace = true
