[package]
name = "ratpub_smol"
version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
ratpub.workspace = true
futures-lite = "2"
tokio.workspace = true
anyhow.workspace = true
ros2-interfaces-jazzy-rkyv = { version = "0.0.4", features = [
  "std_msgs",
], git = "https://github.com/stelzo/ros2-interfaces-jazzy-rkyv.git", branch = "main" }
