[package]
name = "sea"
edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
nalgebra.workspace = true
log.workspace = true
env_logger.workspace = true
bimap = "0.6.3"
etherparse = "0.13.0"
ipnet = "2.8.0"
rand = "0.8.5"
tokio.workspace = true
anyhow.workspace = true
ros_pointcloud2.workspace = true
serde.workspace = true
bincode.workspace = true
pnet = "0.35.0"
socket2 = "0.5.8"
async-trait.workspace = true
rlc.workspace = true
