[package]
name = "wind"
edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sea.workspace = true
env_logger.workspace = true
log.workspace = true
nalgebra.workspace = true
tokio.workspace = true
rkyv.workspace = true
bincode.workspace = true
rlc.workspace = true
anyhow.workspace = true
ros_pointcloud2.workspace = true
async-trait.workspace = true

roslibrust = { version = "0.12.2", features = ["ros1", "macro"] }
ros2-client.workspace = true
ros2-interfaces-jazzy.workspace = true
ros2-interfaces-jazzy-rkyv.workspace = true
cdr-encoding = { version = "0.10" }
byteorder = { version = "1.3", features = ["i128"] }

[[bin]]
name = "wind-ros1"
path = "src/ros1.rs"

[[bin]]
name = "wind-ros2"
path = "src/ros2.rs"
