[package]
name = "wind"
edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sea.workspace = true
bagread.workspace = true
env_logger.workspace = true
log.workspace = true
nalgebra.workspace = true
tokio.workspace = true
rkyv.workspace = true
bincode.workspace = true
rlc.workspace = true
anyhow.workspace = true
ros_pointcloud2.workspace = true
async-trait.workspace = true

roslibrust = { workspace = true, optional = true }
r2r = { workspace = true, optional = true }
ros2-client = { workspace = true, optional = true }
ros2-interfaces-jazzy = { workspace = true, optional = true }
ros2-interfaces-jazzy-rkyv.workspace = true
cdr-encoding = { version = "0.10" }
byteorder = { version = "1.3", features = ["i128"] }
ratpub = { workspace = true, optional = true }

[features]
default = ["ratpub"]
ros2-c = ["dep:r2r", "dep:ros2-interfaces-jazzy"]
ros2-native = ["dep:ros2-client", "dep:ros2-interfaces-jazzy"]
ros1-native = ["dep:roslibrust"]
ratpub = ["dep:ratpub"]

[[bin]]
name = "wind-ros1-native"
path = "src/ros1.rs"
required-features = ["ros1-native"]

[[bin]]
name = "wind-ros2-native"
path = "src/ros2.rs"
required-features = ["ros2-native"]

[[bin]]
name = "wind-ros2-c"
path = "src/ros2_r2r.rs"
required-features = ["ros2-c"]

[[bin]]
name = "wind-rat"
path = "src/ratpub.rs"
required-features = ["ratpub"]
